tests/checker/fail/literal_dispatch_missing_catchall.can
route = (String) => String {
    String -> (
        * "/a" => String { "a" }
        * "/b" => String { "b" }
    )
}

Unit => Program {
    "/a".route().print()
}
